k8s/app-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  type: NodePort
  selector:
    app: springboot-app
  ports:
    - port: 80
      targetPort: 8082
      nodePort: 31311
